resolve unequal padding caused by scrollbar

--- a/src/components/table/Datatable.module.scss
+++ b/src/components/table/Datatable.module.scss
@@ -22,6 +22,7 @@ div {
           top: 0;
           height: 16px;
           z-index: 100;
+          overflow-x: hidden;
         }
 
         th,
