--- a/src/screens/userDetails/UserDetails.module.scss
+++ b/src/screens/userDetails/UserDetails.module.scss
@@ -31,6 +31,10 @@
     }
 
     div {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.25em;
+
       button {
         padding: 0.63em 1em;
         border-radius: 8px;
@@ -43,7 +47,6 @@
         border: 1px solid #e4033b;
       }
       button:nth-child(2) {
-        margin-left: 1.25em;
         color: #39cdcc;
         border: 1px solid #39cdcc;
       }
